--- a/django-by-example/simple_blog_app/simple_blog/templates/blog/index.html
+++ b/django-by-example/simple_blog_app/simple_blog/templates/blog/index.html
@@ -20,4 +20,20 @@
     {% empty %}
         <div class="no-post">暂时还没有发布的文章！</div>
     {% endfor %}
+
+    <div class="pagination">
+        <span class="step-links">
+            {% if post_list.has_previous %}
+                <a href="?page={{ post_list.previous_page_number }}">previous</a>
+            {% endif %}
+
+            <span class="current">
+                Page {{ post_list.number }} of {{ post_list.paginator.num_pages }}
+            </span>
+
+            {% if post_list.has_next %}
+                <a href="?page={{ post_list.next_page_number }}">next</a>
+            {% endif %}
+        </span>
+    </div>
 {% endblock main %}
