--- a/django-by-example/simple_auth_app/auth_app/templates/registration/login.html
+++ b/django-by-example/simple_auth_app/auth_app/templates/registration/login.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
 </head>
 <body>
-   <div class="flex-center">
+    <div class="flex-center">
         <div class="container">
             <div class="flex-center">
                 <div class="unit-1-2 unit-1-on-mobile">
-                    <h3>注册</h3>
-                    <form class="form" action="{% url 'users:register' %}" method="post">
+                    <h3>登录</h3>
+                    <form class="form" action="{% url 'login' %}" method="post">
                         {% csrf_token %}
+                        {{ form.non_field_errors }}
                         {% for field in form %}
                             {{ field.label_tag }}
                             {{ field }}
@@ -21,11 +22,12 @@
                                 <p class="help text-small text-muted">{{ field.help_text|safe }}</p>
                             {% endif %}
                         {% endfor %}
-                        <button type="submit" class="btn btn-primary btn-block">注册</button>
+                        <button type="submit" class="btn btn-primary btn-block">登录</button>
                         <input type="hidden" name="next" value="{{ next }}"/>
                     </form>
-                    <div class="flex-center top-gap text-small">
-                        <a href="login.html">已有账号登录</a>
+                    <div class="flex-left top-gap text-small">
+                        <div class="unit-2-3"><span>没有账号？<a href="{% url 'users:register' %}?next={{ request.path }}">立即注册</a></span></div>
+                        <div class="unit-1-3 flex-right"><span><a href="{% url 'password_reset' %}">忘记密码？</a></span></div>
                     </div>
                 </div>
             </div>
