--- a/django-by-example/simple_auth_app/auth_app/templates/registration/password_change_form.html
+++ b/django-by-example/simple_auth_app/auth_app/templates/registration/password_change_form.html
@@ -6,13 +6,15 @@
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
 </head>
 <body>
-   <div class="flex-center">
+    <div class="flex-center">
         <div class="container">
             <div class="flex-center">
                 <div class="unit-1-2 unit-1-on-mobile">
-                    <h3>注册</h3>
-                    <form class="form" action="{% url 'users:register' %}" method="post">
+                    <h1><a href="{% url 'index' %}">Django Auth Example</a></h1>
+                    <h3>修改密码</h3>
+                    <form class="form" action="{% url 'password_change' %}" method="post">
                         {% csrf_token %}
+                        {{ form.non_field_errors }}
                         {% for field in form %}
                             {{ field.label_tag }}
                             {{ field }}
@@ -21,12 +23,8 @@
                                 <p class="help text-small text-muted">{{ field.help_text|safe }}</p>
                             {% endif %}
                         {% endfor %}
-                        <button type="submit" class="btn btn-primary btn-block">注册</button>
-                        <input type="hidden" name="next" value="{{ next }}"/>
+                        <button type="submit" class="btn btn-primary btn-block">确认修改</button>
                     </form>
-                    <div class="flex-center top-gap text-small">
-                        <a href="login.html">已有账号登录</a>
-                    </div>
                 </div>
             </div>
         </div>
